add score and export model

--- a/course_work/course_work_part_2.ipynb
+++ b/course_work/course_work_part_2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +41,7 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.feature_selection import SelectFromModel, SelectKBest, f_classif\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import f1_score\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
     "from catboost import CatBoostClassifier\n",
@@ -2170,6 +2171,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test_pred = model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7208534165295255"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(\n",
+    "  y_test,\n",
+    "  y_test_pred,\n",
+    "  average='macro'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 217,
    "metadata": {},
    "outputs": [],
@@ -2201,6 +2235,19 @@
    "outputs": [],
    "source": [
     "answers_test.to_csv('answers_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('model.pkl', 'wb') as file:\n",
+    "  pickle.dump(model, file)\n",
+    "  "
    ]
   },
   {
